Refactor changeColor method to use explicit index access in path retrieval