@@ -64,6 +64,6 @@ public class Jellyfish extends OceanCreature {
    public void changeColor(Color color) {
       addCurrentImagesToHistory();
       var path = colorImagePathMap.get(color);
-      setImageByPath(path.getFirst(), path.getLast());
+      setImageByPath(path.get(0), path.get(1));
    }
 }
